fix(popup-menu-web): fixed z-index issue for overlay and collision cases

--- a/packages/pluggableWidgets/popup-menu-web/src/ui/PopupMenu.scss
+++ b/packages/pluggableWidgets/popup-menu-web/src/ui/PopupMenu.scss
@@ -4,6 +4,7 @@
 }
 
 .popupmenu-trigger {
+    position: relative;
     cursor: pointer;
 }
 
